...
    <!-- The translation could not be imported -->
    <string name="translation_import_failed">Failed to import</string>
    <string name="internet_not_available">No internet connection</string>
    <!-- Backup and/or publish a project translation-->
    <string name="backup_and_publish">Backup and Publish</string>
    <string name="upload_wizard_intro">You are about to upload your translation.</string>
    <string name="label_continue">Continue</string>
    <string name="next">Next</string>
    <string name="upload_wizard_overview">Upload Review</string>
    <string name="label_project_details">Project details</string>
    <!-- Indicates how the project is being translated. e.g. Open Bible Stories is being translated from the English language into the Deutsch language -->
    <string name="project_details"><xliff:g example="Open Bible Stories" id="project">\"%1$s\"</xliff:g> is being translated from the <xliff:g example="English" id="source_language">\"%2$s\"</xliff:g> language into the <xliff:g example="Deutsch" id="target_language">\"%3$s\"</xliff:g> language.</string>
    <string name="click_for_details">Click for details</string>
...
    <string name="review_conflicts">Review differences</string>
    <string name="keep_server_changes">Keep server changes</string>
    <string name="keep_local_changes">Keep my changes</string>
    <string name="translation_name">translation name</string>
    <string name="project_uploaded_to">Your project has been uploaded to:\n\n<xliff:g example="http:/test.com/test" id="destination_url">%1$s</xliff:g></string>
    <string name="label_open">Open</string>
    <string name="title_activity_import_usfm_language">Import USFM Project - Select Language</string>
    <string name="title_activity_import_usfm_book">Import USFM Project - Select Book For: </string>
    <string name="label_import_usfm">Import USFM</string>
    <string name="import_usfm_success">USFM file Import Success</string>
    <string name="import_usfm_failed">USFM file Import Failed</string>
    <string name="title_import_usfm_error_book">Error Importing USFM book \'%s\'</string>
    <string name="title_import_usfm_error">Error Importing USFM</string>
    <string name="title_processing_usfm_summary">USFM Processing Summary</string>
    <string name="title_import_usfm_results">USFM Import Results</string>
    <string name="zip_read_error">Error reading Zip</string>
    <string name="file_read_error">Error reading File</string>
    <string name="file_write_error">Error writing File</string>
    <string name="file_write_for_verse">Error writing verse %s</string>
    <string name="file_read_error_detail">Error reading File \'%s\'</string>
    <string name="missing_book_short_name">Missing book short name (\\id or \\toc3)</string>
...
    <string name="duplicate_chapter">Duplicate chapter: %s</string>
    <string name="chapter_out_of_order">Chapter out of order: \'<xliff:g example="4" id="found">%1$s</xliff:g>\' after \'<xliff:g example="2" id="previous">%1$s</xliff:g>\'</string>
    <string name="missing_verses_in_section">No Verses in Section</string>
    <string name="error_prefix">Error: %s</string>
    <string name="no_error">No errors found</string>
    <string name="warning_prefix">Warning: %s</string>
    <string name="found_book">Found book: %s</string>
    <string name="importing_file">Importing: %s</string>
    <string name="selected_language">Selected Language: %s</string>
    <string name="initializing_import">Initializing Import</string>
    <string name="finished_loading">Finished Loading Books</string>
    <string name="processing_chapter">Processing Chapter: %s</string>
    <string name="building_manifest">Building Manifest</string>
    <string name="reading_usfm">Reading USFM</string>
    <string name="importing_usfm">Importing USFM</string>
    <string name="import_usfm_file">Import USFM File</string>
    <string name="invalid_book_name_prompt">\'<xliff:g example="Mark.usfm" id="file_name">%1$s</xliff:g>\'\nhas invalid book name: \'<xliff:g example="marc" id="book_name">%2$s</xliff:g>\'\nDo you wish to select a book name?</string>
    <string name="missing_book_name_prompt">\'<xliff:g example="Mark.usfm" id="file_name">%1$s</xliff:g>\'\nis missing book name\nDo you wish to select a book name?</string>
    <string name="could_not_parse">Could not parse \'<xliff:g example="Mark.usfm" id="file_name">%1$s</xliff:g>\'</string>
    <string name="no_chunk_list">No chunk list found for \'<xliff:g example="marc" id="book_name">%1$s</xliff:g>\'</string>
    <string name="chapter_count_invalid">Expected <xliff:g example="16" id="chunk_count">%1$s</xliff:g> chapters, but last chapter was <xliff:g example="15" id="chapter_count">%2$s</xliff:g></string>
...
